--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "lib": ["es6", "es2016.array.include"],
-    "strict": false,
+    "strict": true,
     "declaration": false,
     "outDir": "out",
     "sourceMap": false,
